updated to grams

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         "calories": "270 calories"
       },
       "recipeIngredient": [
-        "1 cup of pitted dates",
-        "3/4 cup of ground almonds",
+        "250 grams of pitted dates",
+        "187.5 grams of ground almonds",
         "3/4 cup of walnuts",
         "2 tablespoons of chia seeds",
         "2 tablespoons of desiccated coconut",
